test/parsetest/valid/g5_fieldMethods.java
class A {
  public void a() {
  
    /* method invocation */
    return a.b (c);
    
    /* field access */
    return a.b;
    
  }
}
