test/parsetest/invalid/function_calls.java

class foo {
  public void a() {
    foo(,); 
    foo(a(a,a0);
    foo(());
    foo(a,);
    foo(,b);
    foo(a b);
    foo(00);
  }
}
